# LowCodeForITK

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  New Text Document.txt  README.md  utils.cmake
LowCodeForITKApplication/: CMakeLists.txt  LowCodeForITKApplication.cpp  LowCodeForITKApplication.hpp  LowCodeForITKGui.cpp  LowCodeForITKGui.hpp  Main.cpp  TexturesAccessorSingleton.cpp  TexturesOperationsProxySingleton.cpp  TexturesOperationsProxySingleton.hpp
LowCodeForITKApplication/CustomNodes/Interface/: CustomNode.hpp
LowCodeForITKApplication/CustomNodes/SampleNode/: SampleNode.cpp  SampleNode.hpp
LowCodeForITKApplication/DrawStrategy/: BlueprintNodeDrawStarategy.cpp  BlueprintNodeDrawStarategy.hpp  DrawDefaults.cpp  DrawDefaults.hpp  ImageReadNodeDrawStrategy.cpp  ImageReadNodeDrawStrategy.hpp  ImageViewNodeDrawStrategy.cpp  ImageViewNodeDrawStrategy.hpp  ImguiNodeEditorDrawStrategy.cpp  ImguiNodeEditorDrawStrategy.hpp  NodeDrawStrategy.cpp  NodeDrawStrategy.hpp  RGBANodeDrawStrategy.hpp
LowCodeForITKApplication/DrawStrategy/Interface/: DrawStrategy.hpp
LowCodeForITKApplication/DrawVisitor/: ImguiNodeEditorDrawVisitor.cpp  ImguiNodeEditorDrawVisitor.hpp
LowCodeForITKApplication/DrawVisitor/Interface/: DrawVisitor.hpp
LowCodeForITKApplication/Drawing/: DrawDefaults.cpp  DrawDefaults.hpp  DrawStrategy.hpp  ImageReadNodeDrawStrategy.hpp  RGBANodeDrawStrategy.cpp
LowCodeForITKApplication/Drawing/DrawStrategies/: BlueprintNodeDrawStarategy.cpp  BlueprintNodeDrawStarategy.hpp  EdgeDetectionNodeDrawStrategy.hpp  ImageReadNodeDrawStrategy.cpp  ImageReadNodeDrawStrategy.hpp  ImageViewNodeDrawStrategy.cpp  ImageViewNodeDrawStrategy.hpp  NodeDrawStrategy.cpp  NodeDrawStrategy.hpp  RGBANodeDrawStrategy.cpp  RGBANodeDrawStrategy.hpp
LowCodeForITKApplication/Drawing/DrawStrategies/BinaryThresholdNodeDrawStrategy/: BinaryThresholdNodeDrawStrategy.cpp  BinaryThresholdNodeDrawStrategy.hpp
LowCodeForITKApplication/Drawing/DrawStrategies/EdgeDetectionNodeDrawStrategy/: EdgeDetectionNodeDrawStrategy.cpp  EdgeDetectionNodeDrawStrategy.hpp
LowCodeForITKApplication/Drawing/DrawStrategies/FloatingPoinValueNodeDrawStrategy/: FloatingPoinValueNodeDrawStrategy.cpp  FloatingPoinValueNodeDrawStrategy.hpp
LowCodeForITKApplication/Drawing/DrawStrategies/GaussianBlurNodeDrawStrategy/: GaussianBlurNodeDrawStrategy.cpp  GaussianBlurNodeDrawStrategy.hpp
LowCodeForITKApplication/Drawing/DrawStrategies/ImageReadNodeDrawStrategy/: ImageReadNodeDrawStrategy.cpp  ImageReadNodeDrawStrategy.hpp
LowCodeForITKApplication/Drawing/DrawStrategies/ImageSaveNodeDrawStrategy/: ImageSaveNodeDrawStrategy.cpp  ImageSaveNodeDrawStrategy.hpp
LowCodeForITKApplication/Drawing/DrawStrategies/RegistrationNodeDrawStrategy/: RegistrationNodeDrawStrategy.cpp  RegistrationNodeDrawStrategy.hpp
LowCodeForITKApplication/Identification/: Identifiable.cpp  Identifiable.hpp  TypeAliases.hpp
LowCodeForITKApplication/Identification/UniqueIDProvider/Interface/: UniqueIDProvider.hpp
LowCodeForITKApplication/Identification/UniqueIDProvider/SimpleIDProvider/: SimpleIDProvider.cpp  SimpleIDProvider.hpp
LowCodeForITKApplication/Logic/: Link.cpp  Link.hpp  Logic.cpp  Logic.hpp  NodeCreator.hpp  NodesRepository.hpp  SampleNode.hpp  utilities.hpp
LowCodeForITKApplication/Logic/Interface/: Node.cpp  Node.hpp  Pin.hpp
LowCodeForITKApplication/Logic/Interfaces/: Identifiable.hpp  Positionable.hpp  Serializeable.hpp
LowCodeForITKApplication/Logic/Links/: Link.cpp  Link.hpp
LowCodeForITKApplication/Logic/Nodes/: Node.cpp  Node.hpp
LowCodeForITKApplication/Logic/Nodes/BinaryThresholdNode/: BinaryThresholdNode.cpp  BinaryThresholdNode.hpp
LowCodeForITKApplication/Logic/Nodes/EdgeDetectionNode/: EdgeDetectionNode.cpp  EdgeDetectionNode.hpp
LowCodeForITKApplication/Logic/Nodes/FloatingPoinValueNode/: FloatingPoinValueNode.cpp  FloatingPoinValueNode.hpp
LowCodeForITKApplication/Logic/Nodes/FloatingPointValueNode/: FloatingPointValueNode.cpp  FloatingPointValueNode.hpp
LowCodeForITKApplication/Logic/Nodes/GaussianBlurNode/: GaussianBlurNode.cpp  GaussianBlurNode.hpp
LowCodeForITKApplication/Logic/Nodes/RGBANode/: RGBANode.cpp  (+1 more)
LowCodeForITKApplication/Logic/Pins/: Pin.cpp  Pin.hpp
LowCodeForITKApplication/Logic/UniqueIDProvider/: UniqueIDProvider.hpp
LowCodeForITKApplication/Nodes/ImageReadNode/: ImageReadNode.cpp  ImageReadNode.hpp
LowCodeForITKApplication/Nodes/ImageViewNode/: ImageViewNode.cpp  ImageViewNode.hpp
LowCodeForITKApplication/Nodes/Interface/: Node.cpp  Node.hpp
LowCodeForITKApplication/Nodes/RGBANode/: RGBANode.hpp
LowCodeForITKApplication/Nodes/ReadImageNode/: ReadImageNode.cpp  ReadImageNode.hpp
LowCodeForITKApplication/Pins/DefinedPins/: DefinedPins.hpp
LowCodeForITKApplication/Pins/ImagePin/: ImagePin.cpp  ImagePin.hpp
LowCodeForITKApplication/Pins/Interface/: Pin.cpp  Pin.hpp
LowCodeForITKApplication/RefactoringStuff/: HorizontalSplitter.cpp  HorizontalSplitter.hpp  Node.hpp  Nodes.cpp  Nodes.hpp  NodesCreator.cpp  NodesCreator.hpp  Pane.hpp  Resizeable.hpp  Splitter.hpp  StyleWindow.cpp  StyleWindow.hpp  VerticalSplitter.cpp  VerticalSplitter.hpp
LowCodeForITKApplication/UniqueIDProvider/Interface/: UniqueIDProvider.hpp
LowCodeForITKApplication/UniqueIDProvider/SimpleIDProvider/: SimpleIDProvider.cpp  SimpleIDProvider.hpp
LowCodeForITKApplication/application/: ApplicationTextureOperator.cpp  ApplicationTextureOperator.hpp  ApplicationTexturesRepository.cpp  ApplicationTexturesRepository.hpp  ColorPicker.hpp  LowCodeForITKApplication.cpp  LowCodeForITKApplication.hpp  NodeDefines.hpp  TexturesAccessorSingleton.hpp  TexturesOperationsProxySingleton.cpp  TexturesOperationsProxySingleton.hpp
LowCodeForITKApplication/application/Drawing/: DrawDefaults.cpp  TextureOperator.hpp  TexturesRepository.hpp
SourcesLowCodeForITK/: CMakeLists.txt
Tests/ITKPlayground/: CMakeLists.txt  main.cpp  playground.qml
Tests/QuickQanavaPlayground/: CMakeLists.txt  main.cpp  playground.qml  qml.qrc
Tests/mockTest/: CMakeLists.txt  mockTest.cpp  mockTest.qml  qml.qrc
(+53 files in other folders)
